Remove method in DcTerminal that belongs only to DcTerminalImpl
Signed-off-by: Denis Bonnand <denis.bonnand@supergrid-institute.com>